<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".register">

    <EditText
        android:id="@+id/tf_nombre_register4"
        android:layout_width="320dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_background"
        android:hint="Ingresa tu correo"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateInput"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="411dp"
        android:layout_height="237dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/description_camion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/login" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/titulo"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/tf_nombre_register"
        android:layout_width="320dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_background"
        android:hint="Ingresa tus nombres"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/tf_apellido_register"
        android:layout_width="320dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_background"
        android:hint="Ingresa tus apellidos"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_nombre_register"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/tf_documento_register"
        android:layout_width="321dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_background"
        android:hint="Ingresa tu número de documento"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/documentType"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/documentType"
        android:layout_width="319dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/spinner_background"
        android:entries="@array/document_types"
        android:padding="10dp"
        android:popupBackground="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_apellido_register"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/dateInput"
        android:layout_width="322dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/spinner_background"
        android:cursorVisible="false"
        android:focusable="false"
        android:hint="Fecha de nacimiento"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_documento_register"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_register"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@color/button"
        android:radius="53dp"
        android:text="@string/button_paso1"
        android:textSize="24sp"
        app:circularflow_radiusInDP="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_nombre_register4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/derechos"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>